Add saving configuration to file for loading

--- a/STTTS.Common/STTTS.Common.csproj
+++ b/STTTS.Common/STTTS.Common.csproj
@@ -12,4 +12,8 @@
 	<PackageReference Include="System.Speech" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\STTTS.IO\STTTS.IO.csproj" />
+  </ItemGroup>
+
 </Project>
